<resources>
    <string name="app_name">My Application_new</string>
    <string name="et_hint">用户名</string>
    <string name="btn_sure">确定</string>
    <string name="btn_cancel">取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_contact_edit">ContactEditActivity</string>
    <string name="cbk_checked">checked</string>
    <string name="cbk_unchecked">unchecked</string>
    <string name="rb_male">男</string>
    <string name="rb_female">女</string>
</resources>
